# branchpoint

./: .gitignore  CLAUDE.md  LICENSE  README.md
examples/python/: 01-basic-agent.py  02-tool-using-agent.py
examples/typescript/: 01-basic-agent.ts
sdk-python/: README.md  pyproject.toml
sdk-python/src/branchpoint/: __init__.py  cli.py  decorators.py  pricing.py  recorder.py  replay.py  snapshot.py  storage.py  types.py
sdk-python/src/branchpoint/instrument/: __init__.py  anthropic.py  openai.py
sdk-python/tests/: conftest.py  test_decorators.py  test_pricing.py  test_recorder.py  test_storage.py  test_types.py
sdk-typescript/: README.md  package.json  tsconfig.json
sdk-typescript/src/: decorators.ts  index.ts  recorder.ts  types.ts
